Bug 273041 - RTM plasmoid doesn't delete task if you delete them from web interface.
Summary: RTM plasmoid doesn't delete task if you delete them from web interface.
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-rememberthemilk (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-11 15:12 UTC by Tadas
Modified: 2011-08-14 02:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadas 2011-05-11 15:12:20 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

Actually KDE version is 4.6.3.

Reproducible: Always

Steps to Reproduce:
Create a task with plasmoid. 
Goto RTM webpage
Delete created task

Actual Results:  
Tasks are still in plasmoid.

Expected Results:  
Task are deleted from plasmoid.
Comment 1 Alexey Chernov 2011-08-12 20:17:09 UTC
Not reproducible for 4.7.0. There's an interval before changes will appear in plasmoid as it is updated from server approx. once per second. If you wait and see, in some time the task disappears.
Comment 2 Alexey Chernov 2011-08-12 20:25:17 UTC
Well, seems to be reproducible for normal lists and gone away for smart lists. So, the steps are relevant if you skip to some normal list e.g. Inbox.
Comment 3 Andrew Stromme 2011-08-14 02:35:19 UTC
Fixed for KDE 4.7.1 by Alexey Chernov.