Fix updates of deleted tasks

Fix updates of task deletion on server.
Added proper parsing to xmlreaders.

BUG: 273041